--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,18 +1,38 @@
-<h2>Sign up</h2>
+<div class="row">
+	<div class="col-md-4 col-md-offset-4">
+		<div class="panel panel-default">
+			<div class="panel-heading">
+				<div class="panel-title">
+					<h2>Registrarse</h2>
+				</div>
+			</div>
+			<div class="panel-body">
+				<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+				  <%= devise_error_messages! %>
 
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+				  <div class="form-group">
+				  	<%= f.label :email, "Correo Electrónico"%></br>
+				  	<%= f.email_field :email, :autofocus => true , class: "form-control"%>
+				  </div>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
+				  <div class="form-group">
+				  	<%= f.label :password, "Contraseña" %></br>
+				  	<%= f.password_field :password , class: "form-control"%>
+				  </div>
 
-  <div><%= f.label :password %><br />
-  <%= f.password_field :password %></div>
+				  <div class="form-group">
+				  	<%= f.label :password_confirmation, "Confirmar Contraseña" %></br>
+				  	<%= f.password_field :password_confirmation , class: "form-control"%>
+					</div>
 
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
-
-  <div><%= f.submit "Sign up" %></div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+				  <div class="form-group">
+				  	<%= f.submit "Registrarse", class: "btn btn-success" %>
+				  </div>
+				<% end %>
+			</div>
+			<div class="panel-footer">
+				<%= render "devise/shared/links" %>
+			</div>
+		</div>
+	</div>
+</div>
