--- a/app/views/candidates/_form.html.erb
+++ b/app/views/candidates/_form.html.erb
@@ -2,7 +2,6 @@
   <% if @candidate.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@candidate.errors.count, "error") %> prohibited this candidate from being saved:</h2>
-
       <ul>
       <% @candidate.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
@@ -11,19 +10,19 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
+  <div class="form-group">
+    <%= f.label 'Nombre' %><br>
+    <%= f.text_field :name, class: "form-control"%>
   </div>
-  <div class="field">
-    <%= f.label :age %><br>
-    <%= f.number_field :age %>
+  <div class="form-group">
+    <%= f.label 'Edad' %><br>
+    <%= f.number_field :age, class: "form-control" %>
   </div>
-  <div class="field">
-    <%= f.label :sex %><br>
-    <%= f.text_field :sex %>
+  <div class="form-group">
+    <%= f.label 'Sexo' %><br>
+    <%= f.text_field :sex, class: "form-control" %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Crear Candidato", :class=>"btn btn-primary"%>
   </div>
 <% end %>
