--- a/app/views/candidates/edit.html.erb
+++ b/app/views/candidates/edit.html.erb
@@ -1,6 +1,16 @@
-<h1>Editing candidate</h1>
+<div class="row">
+  <div class="col-md-6 col-md-offset-4 ">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <div class="panel-title">
+          <h1>Información del Candidato</h1>
+        </div>
+      	</div>
+      	<div class="panel-body">
+			<%= render 'form' %>
+		</div>
+      <%= link_to 'Regresar', candidates_path %>
+    </div>
+  </div>
+</div>
 
-<%= render 'form' %>
-
-<%= link_to 'Show', @candidate %> |
-<%= link_to 'Back', candidates_path %>
