--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="<%=root_path%>">
       <!-- 
       <%= image_tag("http://www.tusdiputados.com/images/logo_pan.png", :class =>"brand " ) %> -->
       PAN
