--- a/app/views/militants/new.html.erb
+++ b/app/views/militants/new.html.erb
@@ -1,5 +1,15 @@
-<h1>New militant</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', militants_path %>
+<div class="row">
+  <div class="col-md-6 col-md-offset-4 ">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <div class="panel-title">
+          <h1>Información del Militante</h1>
+        </div>
+      </div>
+      <div class="panel-body">
+				<%= render 'form' %>
+	 		</div>
+      <%= link_to 'Regresar', militants_path %>
+    </div>
+  </div>
+</div>
