--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,11 +1,8 @@
-<h1>Listing groups</h1>
-
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>Name</th>
       <th>Candidate</th>
-      <th></th>
       <th></th>
       <th></th>
     </tr>
@@ -16,7 +13,6 @@
       <tr>
         <td><%= group.name %></td>
         <td><%= group.candidate_id %></td>
-        <td><%= link_to 'Show', group %></td>
         <td><%= link_to 'Edit', edit_group_path(group) %></td>
         <td><%= link_to 'Destroy', group, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
