--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,3 +1,12 @@
 body {
   background-color:#ecf0f1;
 }
+.center{
+	text-align: center;
+}
+.tableAction{
+	cursor: pointer;
+}
+#sessionArea{
+	margin: 10px 15px 10px 0;
+}
