--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,30 +1,45 @@
+<% if user_signed_in? %>
+<div class="container">
+	<div class="pull-right" id="sessionArea">
+		<%= link_to "Cerrar Sesión", destroy_user_session_path, :method => 'delete' %>
+	</div>
+</div>
+<% end %>
 <nav class="navbar navbar-inverse" role="navigation">
-  <!-- Brand and toggle get grouped for better mobile display -->
-  <div class="navbar-header">
-    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-      <span class="sr-only">Toggle navigation</span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </button>
-    <a class="navbar-brand" href="<%=root_path%>">
-      <!-- 
-      <%= image_tag("http://www.tusdiputados.com/images/logo_pan.png", :class =>"brand " ) %> -->
-      PAN
-    </a>
-  </div>
-
-  <!-- Collect the nav links, forms, and other content for toggling -->
-  <div class="collapse navbar-collapse navbar-ex1-collapse">
-    <ul class="nav navbar-nav navbar-right">
-      <% if !user_signed_in? %> 
-      <li><%= link_to "IniciarSesión", new_user_session_path%></li> 
-      <% else %>
-        <li><%= link_to "Grupos", groups_path %></li> 
-        <li><%= link_to "Militantes", militants_path %></li> 
-        <li><%= link_to "Candidatos", candidates_path %></li>
-        <li><%= link_to "Cerrar Sesión", destroy_user_session_path, :method => 'delete' %></li> 
-      <% end %>
-    </ul>
-  </div><!-- /.navbar-collapse -->
+	<div class="container">
+	  <!-- Brand and toggle get grouped for better mobile display -->
+	  <div class="navbar-header">
+	    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+	      <span class="sr-only">Toggle navigation</span>
+	      <span class="icon-bar"></span>
+	      <span class="icon-bar"></span>
+	      <span class="icon-bar"></span>
+	    </button>
+	    <a class="navbar-brand" href="<%=root_path%>">
+	      <!-- 
+	      <%= image_tag("http://www.tusdiputados.com/images/logo_pan.png", :class =>"brand " ) %> -->
+	      PAN
+	    </a>
+	  </div>
+	
+	  <!-- Collect the nav links, forms, and other content for toggling -->
+	  <div class="collapse navbar-collapse navbar-ex1-collapse">
+	    <ul class="nav navbar-nav navbar-right">
+	      <% if !user_signed_in? %> 
+	      <li><%= link_to "IniciarSesión", new_user_session_path%></li> 
+	      <% else %>
+	        <li><%= link_to "Grupos", groups_path %></li> 
+	        <li><%= link_to "Militantes", militants_path %></li> 
+	        <li><%= link_to "Candidatos", candidates_path %></li>
+	        <li class="dropdown">
+	          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Votaciones <span class="caret"></span></a>
+	          <ul class="dropdown-menu" role="menu">
+	            <li><%= link_to "Votaciones", pollings_path %></li> 
+	            <li><%= link_to "Candidatos", candidate_votations_path %></li>
+	          </ul>
+	        </li>
+	      <% end %>
+	    </ul>
+	  </div><!-- /.navbar-collapse -->
+	</div>
 </nav>
