--- a/app/views/militants/index.html.erb
+++ b/app/views/militants/index.html.erb
@@ -1,22 +1,34 @@
-<table class="table">
+<h2>Militantes</h2>
+<hr />
+<div class="row">
+	<div class="col-md-4">
+		    <input type="text" class="form-control" placeholder="Buscar por Nombre">
+	</div>
+	<div class="col-md-3">
+		<select class="form-control"><option>--Seleccione Grupo--</option><option>87060</option><option>90210</option></select>
+	</div>
+	<div class="col-md-3">
+		<select class="form-control"><option>--Seleccione Sección--</option><option>Masculino</option><option>Femenino</option></select>
+	</div>
+	<div class="col-md-2">
+		<%= link_to new_candidate_path, :class=>"btn btn-success btn-block" do%>
+			<span class="glyphicon glyphicon-plus-sign"></span> Nuevo
+		<%end%>
+	</div>
+</div>
+<br />
+<table class="table table-hover table-bordered table-striped">
   <thead>
     <tr>
-      <th>Fecha de Ingreso</th>
-      <th>Apellido Paterno</th>
-      <th>Apellido Materno</th>
-      <th>Nombre</th>
-      <th>Fecha de Nacimiento</th>
       <th>RNM</th>
-      <th>Enlcace</th>
-      <th>Subenlace</th>
+      <th>Nombre</th>
+      <th>Código Postal</th>
+      <th># Celular</th>
+      <th>Email</th>
       <th>Grupo</th>
-      <th>Colonia</th>
       <th>Sección</th>
-      <th>Sector</th>
-      <th>CP</th>
-      <th>Telefono</th>
-      <th>Celular</th>
-      <th>Correo Electónico</th>
+      <th></th>
+      <th></th>
       <th></th>
     </tr>
   </thead>
@@ -24,22 +36,58 @@
   <tbody>
     <% @militants.each do |militant| %>
       <tr>
+      	<td><%= militant.rnm %></td>
+        <td><%= militant.first_name %> <%= militant.last_name %> <%= militant.name %></td>
+        <td><%= militant.cp %></td>
+        <td><%= militant.cellphone %></td>
+        <td><a href="mailto:<%= militant.email %>"><%= militant.email %></a></td>
+        <td><%= militant.group_id %></td>
+        <td><%= militant.section %></td>
+        <td class="center">
+            <%= link_to edit_candidate_path(militant), :class=> 'table-action' do%><span class="glyphicon glyphicon-eye-open"></span><%end%>
+        </td>
+        <td class="center">
+            <%= link_to edit_militant_path(militant), :class=> 'table-action' do%><span class="glyphicon glyphicon-pencil"></span><%end%>
+        </td>
+        <td class="center">
+        	<%= link_to militant, method: :delete, data: { confirm: '¿Está seguro que desea eliminar?' } , :class=> 'table-action' do%><span class="glyphicon glyphicon-remove"></span><% end %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<hr />
+<div class="col-md-12 center">
+	<ul class="pagination">
+	  <li class="disabled"><a href="#">&laquo;</a></li>
+	  <li class="active"><a href="#">1</a></li>
+	  <li><a href="#">2</a></li>
+	  <li><a href="#">3</a></li>
+	  <li><a href="#">4</a></li>
+	  <li><a href="#">5</a></li>
+	  <li><a href="#">&raquo;</a></li>
+	</ul>
+</div>
+
+
+
+
+
+<!--
+<table class="table">
+  <tbody>
+    <% @militants.each do |militant| %>
+      <tr>
         <td><%= militant.register_date %></td>
-        <td><%= militant.first_name %></td>
-        <td><%= militant.last_name %></td>
-        <td><%= militant.name %></td>
         <td><%= militant.bird %></td>
-        <td><%= militant.rnm %></td>
         <td><%= militant.linking %></td>
         <td><%= militant.sub_linking %></td>
         <td><%= militant.group_id %></td>
         <td><%= militant.suburb %></td>
         <td><%= militant.section %></td>
         <td><%= militant.sector %></td>
-        <td><%= militant.cp %></td>
         <td><%= militant.phone %></td>
-        <td><%= militant.cellphone %></td>
-        <td><%= militant.email %></td>
         <td>
           <%= link_to 'Editar', edit_militant_path(militant) %>
           <%= link_to 'Eliminar', militant, method: :delete, data: { confirm: '¿Está seguro que desea eliminar?' } %>
@@ -51,4 +99,5 @@
 
 <br>
 
-<%= link_to 'Agregar Militante', new_militant_path, :class => 'btn btn-success' %>
+<%= link_to 'Agregar Militante', new_militant_path, :class => 'btn btn-success' %
+-->
