--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,5 +16,11 @@
   <div class="container">
 		<%= yield %>
 	</div>
+	<hr />
+	<div id="footerContainer">
+		<div class="container">
+			<a href="#">Partido Acción Nacional</a>, todos los derechos reservados 2014. Desarrollado por <a href="#">Grupo Tegik</a>
+		</div>
+	</div>
 </body>
 </html>
