--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -12,4 +12,15 @@ body {
 }
 #footerContainer{
 	text-align: center;
+	margin-bottom: 20px;
+}
+#profileMenu{
+	margin: 10px 0;
+}
+.profile_menu-img{
+	width: 24px;
+	border: 2px solid #e7e7e7;
+}
+.main_logo{
+	width: 70px;
 }
