--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,8 +1,19 @@
 <% if user_signed_in? %>
 <div class="container">
-	<div class="pull-right" id="sessionArea">
-		<%= link_to "Cerrar Sesión", destroy_user_session_path, :method => 'delete' %>
-	</div>
+	<a class="navbar-brand" href="<%=root_path%>">
+      <%= image_tag("logo.png", class: "main_logo") %>
+    </a>
+    
+	<div class="btn-group pull-right" id="profileMenu">
+    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+      <img src="https://media.licdn.com/mpr/mpr/shrink_200_200/p/2/005/022/273/2e4155f.jpg" class="profile_menu-img" /> Eduardo Williams
+      <span class="caret"></span>
+    </button>
+    <ul class="dropdown-menu" role="menu">
+      <li><a href="militants/1">Mi Perfil</a></li>
+      <li><%= link_to "Cerrar Sesión", destroy_user_session_path, :method => 'delete' %></li>
+    </ul>
+  </div>
 </div>
 <% end %>
 <nav class="navbar navbar-inverse" role="navigation">
@@ -15,11 +26,6 @@
 	      <span class="icon-bar"></span>
 	      <span class="icon-bar"></span>
 	    </button>
-	    <a class="navbar-brand" href="<%=root_path%>">
-	      <!-- 
-	      <%= image_tag("http://www.tusdiputados.com/images/logo_pan.png", :class =>"brand " ) %> -->
-	      PAN
-	    </a>
 	  </div>
 	
 	  <!-- Collect the nav links, forms, and other content for toggling -->
