--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,7 +1,8 @@
 <div class="row">
-  <div id="container1" class="col-sm-12">
+  <div id="container1" class="col-sm-12 well">
   </div>
 </div>
+<hr />
 <div class="row">
   <div class="col-sm-12">
   </div>
@@ -14,14 +15,13 @@
   <div id="container4" class="col-sm-4">
   </div>
 </div>
+<hr />
 <div class="row">
   <div class="col-sm-12">
   </div>
 </div>
 <div class="row">
   <div class="col-sm-12">
-    <div >
       <div id="map" style=' height: 400px; margin:50px;'></div>
-    </div>
   </div>
 </div>
