--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,11 +6,11 @@
     
 	<div class="btn-group pull-right" id="profileMenu">
     <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-      <img src="https://media.licdn.com/mpr/mpr/shrink_200_200/p/2/005/022/273/2e4155f.jpg" class="profile_menu-img" /> Eduardo Williams
+      <img src="http://png-1.findicons.com/files/icons/1072/face_avatars/300/i04.png" class="profile_menu-img" /> Eduardo Williams
       <span class="caret"></span>
     </button>
     <ul class="dropdown-menu" role="menu">
-      <li><a href="militants/1">Mi Perfil</a></li>
+      <li><%= link_to militant_path(current_user) do%>Mi Perfil<% end %></li>
       <li><%= link_to "Cerrar Sesión", destroy_user_session_path, :method => 'delete' %></li>
     </ul>
   </div>
