--- a/app/views/militants/show.html.erb
+++ b/app/views/militants/show.html.erb
@@ -71,19 +71,13 @@
 	</div>
 	<%= simple_form_for Vote.new do |f| %>
 		<div class="col-md-4">
-			<%= f.association :candidate, :include_blank => false, :class=>"form-control" %>
-			<select class="form-control" name="militant_id">
-			  <option value="1">Votación Interna PAN 14</option>
-			  <option value="2">Votación Interna PAN 08</option>
-			</select>
+			<%= f.association :polling, :include_blank => false, :class=>"form-control", label: false, input_html: { class: 'form-control' } %>
 		</div>
 		<div class="col-md-5">
-			<select class="form-control" name="candidate_id">
-			  <option value="1">Candidato A</option>
-			  <option value="2">Candidato B</option>
-			</select>
+			<%= f.association :candidate, :include_blank => false, :class=>"form-control", label: false, input_html: { class: 'form-control' }%>
 		</div>
 		<div class="col-md-3">
+                        <%= f.hidden_field :militant_id, :value => current_user.id %>
 			<%= submit_tag("Registrar Voto", class:"btn btn-primary btn-block") %>
 		</div>
 	<% end %>
