--- a/app/views/votes/index.html.erb
+++ b/app/views/votes/index.html.erb
@@ -1,8 +1,10 @@
 <h1>Listing votes</h1>
 
-<table>
+<table class="table table-hover table-striped table-bordered">
   <thead>
     <tr>
+      <th>Candidato</th>
+      <th>Militante</th>
       <th></th>
       <th></th>
       <th></th>
@@ -12,9 +14,15 @@
   <tbody>
     <% @votes.each do |vote| %>
       <tr>
-        <td><%= link_to 'Show', vote %></td>
-        <td><%= link_to 'Edit', edit_vote_path(vote) %></td>
-        <td><%= link_to 'Destroy', vote, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= vote.candidate.name %></td>
+        <td><%= vote.militant.name %></td>
+        <td class="center"><%= link_to vote, :class=> 'table-action' do%><span class="glyphicon glyphicon-eye-open"></span><%end%></td>
+        <td class="center">
+            <%= link_to edit_vote_path(vote), :class=> 'table-action' do%><span class="glyphicon glyphicon-pencil"></span><%end%>
+        </td>
+        <td class="center">
+        	<%= link_to vote, method: :delete, data: { confirm: '¿Está seguro que desea eliminar?' } , :class=> 'table-action' do%><span class="glyphicon glyphicon-remove"></span><% end %>
+        </td>
       </tr>
     <% end %>
   </tbody>
