--- a/app/views/militants/new.html.erb
+++ b/app/views/militants/new.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-6 col-md-offset-4 ">
+  <div class="col-md-12">
     <div class="panel panel-default">
       <div class="panel-heading">
         <div class="panel-title">
@@ -7,9 +7,8 @@
         </div>
       </div>
       <div class="panel-body">
-				<%= render 'form' %>
+		    <%= render 'form' %>
 	 		</div>
-      <%= link_to 'Regresar', militants_path %>
     </div>
   </div>
 </div>
