--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -14,6 +14,31 @@
 				  	<%= f.label :email, "Correo Electrónico"%></br>
 				  	<%= f.email_field :email, :autofocus => true , class: "form-control"%>
 				  </div>
+				  
+				  <div class="form-group">
+				  	<%= f.label :name, "Nombre(s)"%></br>
+				  	<%= f.text_field :name, class: "form-control"%>
+				  </div>
+				  
+				  <div class="form-group">
+				  	<%= f.label :last_name, "Apellido(s)"%></br>
+				  	<%= f.email_field :last_name, class: "form-control"%>
+				  </div>
+				  
+				  <div class="form-group">
+				  	<%= f.label :rnm, "RNM"%></br>
+				  	<%= f.text_fierd :rnm, class: "form-control"%>
+				  </div>
+				  
+				  <div class="form-group">
+				  	<%= f.label :zipcode, "Código Postal"%></br>
+				  	<%= f.email_field :zipcode, class: "form-control"%>
+				  </div>
+				  
+				  <div class="form-group">
+				  	<%= f.label :section, "Sección"%></br>
+				  	<%= f.text_field :section, class: "form-control"%>
+				  </div>
 
 				  <div class="form-group">
 				  	<%= f.label :password, "Contraseña" %></br>
