--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,6 +11,7 @@
     </button>
     <ul class="dropdown-menu" role="menu">
       <li><%= link_to militant_path(current_user) do%>Mi Perfil<% end %></li>
+      <li><%= link_to "Mensajes", messages_path %></li>
       <li><%= link_to "Cerrar Sesión", destroy_user_session_path, :method => 'delete' %></li>
     </ul>
   </div>
@@ -32,10 +33,12 @@
 	  <div class="collapse navbar-collapse navbar-ex1-collapse">
 	    <ul class="nav navbar-nav navbar-right">
 	      <% if !user_signed_in? %> 
-	      <li><%= link_to "IniciarSesión", new_user_session_path%></li> 
+	      <li><%= link_to "Iniciar Sesión", new_user_session_path%></li> 
 	      <% else %>
-	        <li><%= link_to "Grupos", groups_path %></li> 
-	        <li><%= link_to "Militantes", militants_path %></li> 
+	        <li><%= link_to "Jugadores", militants_path %></li> 
+	        <li><%= link_to "Enlaces", links_path %></li>
+	        <li><%= link_to "SubEnlaces", sublinks_path %></li>
+	        <li><%= link_to "Coordinadores", militants_path %></li>
 	        <li><%= link_to "Candidatos", candidates_path %></li>
 	        <li class="dropdown">
 	          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Votaciones <span class="caret"></span></a>
