--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,7 +11,6 @@
     </button>
     <ul class="dropdown-menu" role="menu">
       <li><%= link_to militant_path(current_user) do%>Mi Perfil<% end %></li>
-      <li><%= link_to "Mensajes", messages_path %></li>
       <li><%= link_to "Cerrar Sesión", destroy_user_session_path, :method => 'delete' %></li>
     </ul>
   </div>
@@ -33,20 +32,62 @@
 	  <div class="collapse navbar-collapse navbar-ex1-collapse">
 	    <ul class="nav navbar-nav navbar-right">
 	      <% if !user_signed_in? %> 
-	      <li><%= link_to "Iniciar Sesión", new_user_session_path%></li> 
+	      	<li><%= link_to "Iniciar Sesión", new_user_session_path%></li> 
 	      <% else %>
-	        <li><%= link_to "Jugadores", militants_path %></li> 
-	        <li><%= link_to "Enlaces", links_path %></li>
-	        <li><%= link_to "SubEnlaces", sublinks_path %></li>
-	        <li><%= link_to "Coordinadores", militants_path %></li>
-	        <li><%= link_to "Candidatos", candidates_path %></li>
-	        <li class="dropdown">
-	          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Votaciones <span class="caret"></span></a>
-	          <ul class="dropdown-menu" role="menu">
-	            <li><%= link_to "Votaciones", pollings_path %></li> 
-	            <li><%= link_to "Candidatos", candidate_votations_path %></li>
-	          </ul>
-	        </li>
+	      	<% if current_user.admin? %> 
+		      	<li><%= link_to new_message_path do %><b>Mensaje Masivo</b><% end %></li>
+		        <li><%= link_to "Jugadores", users_path + "?role=jugador" %></li> 
+		        <li><%= link_to "Enlaces", users_path + "?role=enlace" %></li>
+		        <li><%= link_to "SubEnlaces", users_path + "?role=subenlace" %></li>
+	        	<li><%= link_to "Coordinadores", users_path + "?role=coordinador" %></li>
+		        <li><%= link_to "Candidatos", candidates_path %></li>
+		        <li class="dropdown">
+		          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Votaciones <span class="caret"></span></a>
+		          <ul class="dropdown-menu" role="menu">
+		            <li><%= link_to "Votaciones", pollings_path %></li> 
+		            <li><%= link_to "Candidatos", candidate_votations_path %></li>
+		          </ul>
+		        </li>
+	        <% end %>
+	        <% if current_user.coordinador? %> 
+	        	<li><%= link_to new_message_path do %><b>Mensaje Masivo</b><% end %></li>
+		        <li><%= link_to "Jugadores", users_path + "?role=jugador" %></li> 
+		        <li><%= link_to "Enlaces", users_path + "?role=enlace" %></li>
+		        <li><%= link_to "SubEnlaces", users_path + "?role=subenlace" %></li>
+		        <li><%= link_to "Candidatos", candidates_path %></li>
+		        <li class="dropdown">
+		          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Votaciones <span class="caret"></span></a>
+		          <ul class="dropdown-menu" role="menu">
+		            <li><%= link_to "Votaciones", pollings_path %></li> 
+		            <li><%= link_to "Candidatos", candidate_votations_path %></li>
+		          </ul>
+		        </li>
+	        <% end %>
+	        <% if current_user.enlace? %> 
+	        	<li><%= link_to new_message_path do %><b>Mensaje Masivo</b><% end %></li>
+		        <li><%= link_to "Jugadores", users_path + "?role=jugador" %></li> 
+		        <li><%= link_to "SubEnlaces", users_path + "?role=subenlace" %></li>
+		        <li><%= link_to "Candidatos", candidates_path %></li>
+		        <li class="dropdown">
+		          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Votaciones <span class="caret"></span></a>
+		          <ul class="dropdown-menu" role="menu">
+		            <li><%= link_to "Votaciones", pollings_path %></li> 
+		            <li><%= link_to "Candidatos", candidate_votations_path %></li>
+		          </ul>
+		        </li>
+	        <% end %>
+	        <% if current_user.subenlace? %> 
+	        	<li><%= link_to new_message_path do %><b>Mensaje Masivo</b><% end %></li>
+		        <li><%= link_to "Jugadores", users_path + "?role=jugador" %></li> 
+		        <li><%= link_to "Candidatos", candidates_path %></li>
+		        <li class="dropdown">
+		          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Votaciones <span class="caret"></span></a>
+		          <ul class="dropdown-menu" role="menu">
+		            <li><%= link_to "Votaciones", pollings_path %></li> 
+		            <li><%= link_to "Candidatos", candidate_votations_path %></li>
+		          </ul>
+		        </li>
+	        <% end %>
 	      <% end %>
 	    </ul>
 	  </div><!-- /.navbar-collapse -->
